# rus_back_end

./: .gitignore  README.md
.cache/clangd/index/: main.cpp.3886C9D643A7BEDF.idx  point_cloud_generator.cpp.606901A1FD1552CF.idx  point_cloud_generator.cpp.7B5B98CE4FFACBCB.idx  point_cloud_generator.hpp.21147B8A2CF45F90.idx  point_cloud_generator.hpp.CAA159149F6CEE76.idx  trajectory_planner.cpp.95024773279FE6B6.idx  trajectory_planner.hpp.D7AE52429FA6D466.idx
docs/: DevelopmentGuide.md  README.md
docs/rus_sim_force/: rus_sim_force.md
docs/rus_sim_task_executor/: rus_sim_task_executor.md
src/frcobot_ros2/fairino_hardware/libfairino/lib/: libfairino.so.2
src/rus_sim_bringup/: CMakeLists.txt  package.xml
src/rus_sim_force/: CMakeLists.txt  package.xml
src/rus_sim_force/include/rus_sim_force/: wrench_estimate.hpp
src/rus_sim_force/src/: main.cpp
src/rus_sim_force/src/rus_sim_force/: wrench_estimate.cpp
src/rus_sim_force/test/src/: test_wrench_estimate_smoke.cpp  test_wrench_estimate_val.cpp
src/rus_sim_force/test/test_include/: test_wrench_estimate_smoke.hpp  test_wrench_estimate_val.hpp
src/rus_sim_interfaces/: CMakeLists.txt  package.xml
src/rus_sim_perception/: CMakeLists.txt  package.xml
src/rus_sim_planner/: CMakeLists.txt  package.xml
src/rus_sim_planner/include/rus_sim_planner/: trajectory_planner.hpp  trajectory_planner_node.hpp
src/rus_sim_planner/src/: main.cpp
src/rus_sim_planner/src/rus_sim_planner/: trajectory_planner.cpp  trajectory_planner_node.cpp
src/rus_sim_planning/: CMakeLists.txt  package.xml
src/rus_sim_planning/include/rus_sim_planning/: trajectory_planner.hpp
src/rus_sim_planning/src/: main.cpp
src/rus_sim_planning/src/rus_sim_planning/: trajectory_planner.cpp
src/rus_sim_planning/test/: point_cloud_generator.cpp  point_cloud_generator.hpp
src/rus_sim_pointcloud/: CMakeLists.txt  package.xml
src/rus_sim_pointcloud/include/rus_sim_pointcloud/: point_cloud_node.hpp  point_cloud_preprocess.hpp
src/rus_sim_pointcloud/src/: main.cpp
src/rus_sim_pointcloud/src/rus_sim_pointcloud/: point_cloud_node.cpp  point_cloud_preprocess.cpp
src/rus_sim_task_executor/include/rus_sim_task_executor/: scan_state.hpp  scan_state_machine.hpp
src/rus_sim_task_executor/src/rus_sim_task_executor/: scan_state_machine.cpp
src/rus_sim_utils/: CMakeLists.txt  package.xml
